docs/loop/v19/F/台本F_F_出力.md
# 台本F 生出力（第19版）

- 利用者ID: `t-s5-222108-F`
- 会話ID: `26c404ac-0651-4e9a-aa13-c0f1c1f31b59`
- 版の目印: `定数生成（true文字列）／版 2026-09-17k`

本文は一字も直していません。

---

## 1通目

- 送った文: `（空文字）`
- Dify側の時刻(JST): （不明）
- 所要: 0.6秒 ／ 返事 0字 ／ 通ったノード 0個

**返ってきた本文（そのまま）**

```
（返事なし）
```

<details><summary>通ったノード</summary>

- （ノードは1つも動いていません）

</details>

---

## 2通目

- 送った文: `こんにちは`
- Dify側の時刻(JST): 2026-09-17 22:21:13
- 所要: 19.0秒 ／ 返事 75字 ／ 通ったノード 31個

**返ってきた本文（そのまま）**

```
こんにちは。ご連絡いただきありがとうございます。

何かお困りのことや、お話ししたいことはありますか？
ゆっくりで大丈夫ですので、お聞かせくださいね。
```

<details><summary>通ったノード</summary>

- ユーザー入力
- IF/ELSE 16（カルテ照会はまだか）
- HTTP リクエスト（カルテ照会）
- コード（カルテの整形）
- 変数代入（カルテ）
- 定数生成（true文字列）／版 2026-09-17k
- 現在時刻取得（UNIX秒）
- 経過時間判定（ロック解除チェック）
- コード（期限切れの解除・経過ターン計算）
- 変数代入（期限切れの解除）
- IF/ELSE 7（会話継続チェック：重複防止・長時間対策）
- パラメータ抽出
- コード（入口フォーム判定・初回受付の本文組み立て）
- IF/ELSE 8（事前情報の登録：入口フォーム、または最初の5往復）
- HTTP リクエスト（相談記録登録：初回受付）
- 変数代入（初回受付ログ済みフラグ）
- コード（初回受付の保存の結果判定）
- コード（相談外の連続カウント）
- IF/ELSE 14（初回受付の保存の失敗チェック）
- 変数代入（相談外カウント更新）
- コード（支援必要度の保持・フェーズ・着地判定）
- 変数代入（支援必要度・フェーズ・着地）
- コード（危機の速報判定と本文）
- IF/ELSE 11（危機の速報判定）
- IF/ELSE 10（着地したときだけ通知する）
- LLM
- 返信整形（サマリー除去）
- 回答
- IF/ELSE 6（引き継ぎサマリー有無）
- パラメータ抽出3（有人対応同意）
- IF/ELSE 4（有人対応同意判定）

</details>

---

## 3通目

- 送った文: `こんにちは`
- Dify側の時刻(JST): 2026-09-17 22:21:32
- 所要: 29.2秒 ／ 返事 98字 ／ 通ったノード 28個

**返ってきた本文（そのまま）**

```
お返事ありがとうございます。

もしよろしければ、どのようなことでご連絡くださったのか、少しずつお聞かせいただけますか。
うまく言葉にまとまらなくても、思いつくままにお話しいただいて大丈夫ですよ。
```

<details><summary>通ったノード</summary>

- ユーザー入力
- IF/ELSE 16（カルテ照会はまだか）
- 定数生成（true文字列）／版 2026-09-17k
- 現在時刻取得（UNIX秒）
- 経過時間判定（ロック解除チェック）
- コード（期限切れの解除・経過ターン計算）
- 変数代入（期限切れの解除）
- IF/ELSE 7（会話継続チェック：重複防止・長時間対策）
- パラメータ抽出
- コード（入口フォーム判定・初回受付の本文組み立て）
- IF/ELSE 8（事前情報の登録：入口フォーム、または最初の5往復）
- HTTP リクエスト（相談記録登録：初回受付）
- 変数代入（初回受付ログ済みフラグ）
- コード（初回受付の保存の結果判定）
- IF/ELSE 14（初回受付の保存の失敗チェック）
- コード（相談外の連続カウント）
- 変数代入（相談外カウント更新）
- コード（支援必要度の保持・フェーズ・着地判定）
- 変数代入（支援必要度・フェーズ・着地）
- コード（危機の速報判定と本文）
- IF/ELSE 11（危機の速報判定）
- IF/ELSE 10（着地したときだけ通知する）
- LLM
- 返信整形（サマリー除去）
- 回答
- IF/ELSE 6（引き継ぎサマリー有無）
- パラメータ抽出3（有人対応同意）
- IF/ELSE 4（有人対応同意判定）

</details>

---
